src/test/ui/use/use-after-move-based-on-type.stderr
error[E0382]: borrow of moved value: `x`
  --> $DIR/use-after-move-based-on-type.rs:4:20
   |
LL |     let x = "Hello!".to_string();
   |         - move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait
LL |     let _y = x;
   |              - value moved here
LL |     println!("{}", x);
   |                    ^ value borrowed here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
